header text alignment fix

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,7 +19,7 @@ body {
 }
 
 .header {
-  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.06);
+  filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.06));
   background-color: #ffffff;
   font-weight: 800;
 }
@@ -477,11 +477,6 @@ div.country__poster-data>div>p>span {
   }
 
   .header {
-    /* display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center; */
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     background-color: #fff;
     font-size: 1.5rem;
     font-weight: 800;
